$Id$
            
            [- Version 2.1.21 -]
2006-07-24: Added :end-string argument to 'test' macro.

2006-07-02: Improved format of error message in 'control-nest'.

            [- Version 2.1.20 2006/06/28 22:56:58 airfoyle Exp -]
2006-06-28: util.lisp: Corrected 'format' calls that lacked control
            strings.
            chunk.lisp: 'chunk-internal-term-mgt' didn't actually call
            'unmanage' in the case where the chunk had derivees (!).
            How did this ever work?  I fixed it.

            [- Version 2.1.19 2006/06/26 20:06:48 airfoyle Exp -]
2006-06-11: Corrected bug in Or-chunk/derive-date: If current date is
            newer than earliest disjunct, stick with current date.
            setter.lisp: In 'simple-dat-match', any quoted expression
            should return value 0, because it can contain no free
            occurrences of | dat|.

            [- Version 2.1.17 2006/05/30 13:54:47 airfoyle Exp -]
2006-05-30: Defined 'with-gen-vars', around cool new convention that
            generated-variable names in macros are of the form -x-.
            In debug.lisp: 'g' and all other dbg-stack* searchers now
            pull the entries they find to the front, so that 'ps' is
            less likely to flush something useful.

            [- Version 2.1.16 2006/05/25 20:01:19 airfoyle Exp -]
2006-05-25: Changed query message in 'fload-versions'.  Hopefully
            more accurate.

            [- Version 2.1.15 2006/05/25 14:17:12 airfoyle Exp -]
2006-05-25: Added code to ensure that (depends-on (:at :read-time)
            ...) is effective; that is, that the file will be
            slurped for macros if else.  Also altered 'f-l-c-chunk' to
            return multiple values instead of a list.

            [- Version 2.1.14 2006/05/23 21:37:10 airfoyle Exp -]
2006-05-23: Fixed bug in definition of 'setter' (setter.lisp), and
            reversed order of args to setter (and hence to
            ^-this-val and <-this-val).