@@ -70,12 +70,14 @@ If so, type it here (blank line for no extra layer): ")
 			 (not (string-ends-with bi directory-delimiter*)))
 		    (strings-concat bi directory-delimiter*))
 		   (t bi))))
-   (install-ytfm-after-queries))
+   (install-ytfm-after-queries sto))
 
-(defun install-ytfm-after-queries ()
+(defun install-ytfm-after-queries (sto)
    (load-yt-config-file)
    (load (strings-concat ytools-home-dir* "ytools.lsy"))
    (let ((*readtable* (intern-eval :ytools ytools-readtable* :ytools)))
+      (cond (sto
+             (intern-call ytools delete-core-files)))
       (with-compilation-unit ()
 	 (intern-call ytools compile-core)))
    t)
